[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "twine"
]

[project]
name = "eq-quizgen"
version = "0.2.1"
description = "A tool that can generate multiple types of quizzes from a common configuration."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
    {name = "Eriq Augustine", email = "eaugusti@ucsc.edu"},
]

keywords = ['education', 'quiz', 'canvas', 'tex', 'latex']
classifiers = [
    'Intended Audience :: Education',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
]

dependencies = [
    "GitPython>=3.1",
    "Jinja2>=3.1.0",
    "beautifulsoup4>=4.10",
    "lark>=1.1.8",
    "json5>=0.9.14",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/eriq-augustine/quizgen"
Repository = "https://github.com/eriq-augustine/quizgen"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.template"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quizgen*"]
exclude = ["node_modules"]
