[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "packaging>=21.3",
    "twine",
    "vermin",
]

[project]
name = "eq-quizgen"
version = "0.3.0"
description = "A tool that can generate multiple types of quizzes from a common configuration."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

authors = [
    {name = "Eriq Augustine", email = "eaugusti@ucsc.edu"},
]

keywords = ['education', 'quiz', 'canvas', 'tex', 'latex']
classifiers = [
    'Intended Audience :: Education',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
]

dependencies = [
    "GitPython>=3.1",
    "Jinja2>=3.1.0",
    "beautifulsoup4>=4.10",
    "lxml>=5.3.0",
    "json5>=0.9.14",
    "markdown-it-py>=3.0.0",
    "mdformat>=0.7.19",
    "mdformat_tables>=1.0.0",
    "mdit-py-plugins>=0.4.2",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/edulinq/quizgen"
Repository = "https://github.com/edulinq/quizgen"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.template"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quizgen*"]
exclude = ["node_modules"]
