[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "packaging>=21.3",
    "twine",
    "vermin",
]

[project]
name = "edq-quizcomp"
description = "A tool that can generate multiple types of quizzes from a common configuration."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

authors = [
    {name = "Eriq Augustine", email = "eriq@edulinq.org"},
]

keywords = ['education', 'quiz', 'canvas', 'tex', 'latex', 'qti']
classifiers = [
    'Intended Audience :: Education',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
]

[tool.setuptools.dynamic]
version = {attr = "quizcomp.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}}

[project.urls]
Homepage = "https://github.com/edulinq/quiz-composer"
Repository = "https://github.com/edulinq/quiz-composer"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.template"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quizcomp*"]
exclude = ["node_modules"]
